@@ -3,3 +3,4 @@ STR=az
 STR2=a1
 ARRAY='a "b c" d'
 USCAN_SYMLINK=rename
+USCAN_VERBOSE=yes
