@@ -12,6 +12,10 @@ devscripts (2.19.4) UNRELEASED; urgency=medium
   * chdist:
     + Drop Dir::State::status as apt doesn't hard-code it since 1.3~pre3
 
+  [ Xavier Guimard ]
+  * uscan:
+    + Fix bad check for "verbose" in Config.pm.  Closes: #923441
+
  -- Mattia Rizzolo <mattia@debian.org>  Tue, 19 Feb 2019 11:54:13 +0100
 
 devscripts (2.19.3) unstable; urgency=medium
